--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "npm": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-international-phone": "^4.4.0",
     "styled-components": "^6.1.13",
