--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^6.1.1",
     "@mui/x-date-pickers-pro": "^7.23.3",
     "@react-google-maps/api": "^2.20.5",
+    "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "dayjs": "^1.11.13",
