--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers-pro": "^7.23.3",
     "@react-google-maps/api": "^2.20.5",
     "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "dayjs": "^1.11.13",
