--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.3",
     "@mui/lab": "^6.0.0-beta.22",
-    "@mui/material": "^6.3.1",
+    "@mui/material": "^6.4.3",
     "@mui/styled-engine-sc": "^6.1.1",
     "@mui/x-date-pickers-pro": "^7.23.3",
     "@react-google-maps/api": "^2.20.5",
