--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "0.424.0",
     "next": "14.2.13",
     "next-intl": "^3.17.2",
+    "nextjs-toploader": "^3.7.15",
     "npm": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
